Fixed alignment issue and some styling with the main navigation

--- a/_scss/base/_layout.scss
+++ b/_scss/base/_layout.scss
@@ -10,7 +10,7 @@ html {
 
 body,
 html {
-    height: 100%;
+
 }
 /*---------------------------------
 Examples formatting
